--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "kaelymills",
-    "password": "Starbucks95",
+    "username": "root",
+    "password": null,
     "database": "stranger_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
